k8s/rapt_server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rapt-server-deployment
  labels:
    app: rapt-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: rapt-server-pod
  template:
    metadata:
      labels:
        app: rapt-server-pod
    spec:
      imagePullSecrets:
        - name: rapt-container-registry
      containers:
        - name: rapt-server
          image: registry.digitalocean.com/rapt-container-registry/rapt_server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---

apiVersion: v1
kind: Service
metadata: 
  name: rapt-server-loadbalancersvc
spec:
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80 # pod/container port
  selector:
    app: rapt-server-pod
