k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rapt-ingress
  annotations:
    cert-manager.io/issuer: letsencrypt-nginx
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - rapt.chat
      secretName: rapt-tls-cert-secret
  rules:
    - host: rapt.chat
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rapt-site-clustersvc
                port:
                  number: 6002
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: rapt-service-clustersvc
                port:
                  number: 6001
